# nft-contracts

./: Cargo.toml  Makefile.toml  README.md
contracts/collections/cw721-base/: Cargo.toml
contracts/collections/cw721-base/src/: contract_tests.rs  execute.rs  lib.rs  msg.rs
contracts/collections/cw721-character-onchain/: Cargo.toml  README.md
contracts/collections/cw721-character-onchain/examples/: schema.rs
contracts/collections/cw721-character-onchain/src/: contract_tests.rs  error.rs  execute.rs  lib.rs  msg.rs  query.rs  state.rs
contracts/collections/cw721-mutable/: Cargo.toml  README.md
contracts/collections/cw721-mutable/examples/: schema.rs
contracts/collections/cw721-mutable/src/: query.rs
contracts/collections/cw721-trait-onchain/: Cargo.toml  README.md
contracts/collections/cw721-trait-onchain/examples/: schema.rs
contracts/collections/cw721-trait-onchain/src/: contract_tests.rs  execute.rs  lib.rs  msg.rs  query.rs  state.rs
contracts/cw721-base/: Cargo.toml  README.md
contracts/cw721-base/src/: contract_tests.rs  error.rs  execute.rs  lib.rs  msg.rs  state.rs
contracts/data/mintables/: Cargo.toml  README.md
contracts/data/mintables/examples/: schema.rs
contracts/data/mintables/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs
contracts/managers/character-manager/: Cargo.toml  README.md
contracts/managers/character-manager/examples/: schema.rs
contracts/managers/character-manager/schema/raw/: execute.json  instantiate.json  query.json  response_to_allowed_collection_code_id.json  response_to_config.json
contracts/managers/character-manager/src/: contract.rs  error.rs  msg.rs  state.rs
contracts/managers/trait-manager/: Cargo.toml  README.md
contracts/managers/trait-manager/examples/: schema.rs
contracts/managers/trait-manager/schema/raw/: execute.json  instantiate.json  response_to_config.json
contracts/managers/trait-manager/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs
