[workspace]
members = ["packages/*", "contracts/collections/*"]

[workspace.package]
version       = "0.17.0"
edition       = "2021"
license       = "Apache-2.0"
repository = "https://github.com/DigitalKitchenLabs/nft-contracts"
homepage = "https://coolcat.space"
documentation = "https://docs.cosmwasm.com"
rust-version  = "1.65"

[workspace.dependencies]
cosmwasm-schema = "1.2.1"
cosmwasm-std    = "1.2.1"
cw2             = "1.0.1"
cw721           = { version = "0.17.0", path = "./packages/cw721" }
cw-multi-test   = "0.16.2"
cw-ownable      = "0.5.0"
cw-storage-plus = "1.0.1"
cw-utils        = "1.0.1"
schemars        = "0.8.11"
serde           = { version = "1.0.152", default-features = false, features = ["derive"] }
thiserror       = "1.0.38"
url             = "2.3.1"

[profile.release.package.cw721-base]
codegen-units = 1
incremental = false

[profile.release.package.cw721-trait-onchain]
codegen-units = 1
incremental = false

[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false
