[package]
name          = "mintables"
description   = "Contract that will store the NFTs/Bundles/Lootboxes that can be currently minted"
authors       = { workspace = true }
version       = { workspace = true }
edition       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
documentation = { workspace = true }
rust-version  = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std    = { workspace = true }
cw-ownable      = { workspace = true }
cw2             = { workspace = true }
cw-storage-plus = { workspace = true }
schemars        = { workspace = true }
serde           = { workspace = true }
thiserror       = { workspace = true }
