[package]
name = "character-manager"
description = "CoolCat NFT character manager contract"
version     = { workspace = true }
edition     = { workspace = true }
homepage    = { workspace = true }
repository  = { workspace = true }
license     = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema             = { workspace = true }
cosmwasm-std                = { workspace = true }
cw-storage-plus             = { workspace = true }
cw-ownable                  = { workspace = true }
cw-utils                    = { workspace = true }
schemars                    = { workspace = true }
serde                       = { workspace = true }
thiserror                   = { workspace = true }
utils                       = { workspace = true }
cw2                         = { workspace = true }
cw721                       = { workspace = true }
cw721-base                  = { workspace = true, features = ["library"] }
cw721-trait-onchain         = { workspace = true, features = ["library"] }
cw721-character-onchain     = { workspace = true, features = ["library"] }